tests/errors/syntax/expected_l_paren_in_condition/no_l_paren_after_while.c
// Expected '(' in condition
void main()
{
	while true);
}
